# ursa-server

./: .gitignore  .gitmodules  .rosinstall  LICENSE.md  README.md  frames.gv  setup.sh  setup.sh.save
src/: .rosinstall  .rosinstall.bak
src/debug/: CMakeLists.txt  README.md  package.xml
src/debug/launch/: README.md  robot_state_publisher.launch  talker.launch
src/debug/launch/test_scanner_link/: laser_debug.launch  laser_desktop.launch  laser_drone.launch
src/debug/scripts/: live_costmap_plotting.py  transform_broadcaster.py
src/debug/urdf/: ursa.urdf
src/dwa_local_planner/: CMakeLists.txt
src/dwa_local_planner/include/dwa_local_planner/: dwa_planner.h  my_simple_trajectory_generator.h  my_trajectory_cost_function.h
src/dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp  my_simple_trajectory_generator.cpp  my_trajectory_cost_function.cpp
src/laser_scanner_modifier/: CMakeLists.txt  package.xml
src/ursa/: CMakeLists.txt  README.md  gui_plugin.xml  package.xml
src/ursa/config/: base_local_planner_params.yaml  cartographer_config.lua  costmap_common_params.yaml  global_costmap_params.yaml  laser_config.yaml  simulation.rviz  ursa.rviz  ursa_sim.lua
src/ursa/config/mavros/: px4_config.yaml  px4_config_sim.yaml  px4_pluginlists.yaml
src/ursa/config/planner/: base_global_planner_params.yaml  base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  recovery_behaviours.yaml
src/ursa/include/: ursa_panel.h
src/ursa/launch/: arm.launch  backpack_2d.launch  frames.gv  handheld_demo.launch  laser_filter.launch  laser_scanner_to_cartographer_and_rviz.launch  mavros.launch  px4.launch  ursa.launch  ursa_sim.launch  ursa_sim_takeoff_and_land.launch
src/ursa/scripts/: clean_imu_data.py  controller.py  controller_with_arrow_keys.py  get_local_plan_setpoint.py  height_publisher.py  live_plotting.py  live_plotting_2.py  live_plotting_3.py  live_plotting_4.py  live_plotting_5.py  live_plotting_6.py  live_plotting_7.py  live_plotting_8.py  pose.py  pose_reduced.py  scan_filtered_nans.py  set_altitude.py  set_drone_height.py  set_drone_link.py  simulation.py
src/ursa/src/: ursa_panel.cpp
src/ursa/srv/: TakeoffLand.srv
src/ursa/urdf/: handheld_hokuyo.urdf  robot_description.urdf  ursa.urdf
src/ursa_local_planner/: CMakeLists.txt  blp_plugin.xml
src/ursa_local_planner/cfg/: UrsaPlanner.cfg
src/ursa_local_planner/include/ursa_local_planner/: ursa_goal_cost.h  ursa_goal_front_cost.h  ursa_obstacle_cost_function.h  ursa_planner.h  ursa_planner_ros.h  ursa_traj_gen.h
src/ursa_local_planner/src/: ursa_costmap_model.cpp  ursa_goal_cost.cpp  ursa_goal_front_cost.cpp  ursa_obstacle_cost_function.cpp  ursa_planner.cpp  ursa_planner_ros.cpp  ursa_traj_gen.cpp
src/ursa_navigation/rotate_recovery/: package.xml  ursa_rotate_plugin.xml
src/ursa_navigation/ursa_dewall_recovery/: CMakeLists.txt  package.xml  ursa_dewall_plugin.xml
src/ursa_navigation/ursa_dewall_recovery/include/ursa_dewall_recovery/: ursa_dewall_recovery.h
src/ursa_navigation/ursa_dewall_recovery/src/: ursa_dewall_recovery.cpp
src/ursa_navigation/ursa_local_planner/: CMakeLists.txt  package.xml
src/ursa_navigation/ursa_local_planner/include/ursa_local_planner/: ursa_costmap_model.h  ursa_planner.h  ursa_planner_ros.h  ursa_prev_path_cost.h  ursa_sticky_cost.h  ursa_traj_gen.h
src/ursa_navigation/ursa_local_planner/src/: ursa_goal_cost.cpp  ursa_goal_front_cost.cpp  ursa_obstacle_cost_function.cpp  ursa_planner.cpp  ursa_planner_ros.cpp  ursa_prev_path_cost.cpp  ursa_sticky_cost.cpp  ursa_traj_gen.cpp
src/ursa_navigation/ursa_rotate_recovery/: CMakeLists.txt  ursa_rotate_plugin.xml
src/ursa_navigation/ursa_rotate_recovery/include/ursa_rotate_recovery/: ursa_rotate_recovery.h
src/ursa_navigation/ursa_rotate_recovery/src/: ursa_rotate_recovery.cpp
src/ursai_local_planner/: CHANGELOG.rst  CMakeLists.txt  blp_plugin.xml  package.xml
src/ursai_local_planner/cfg/: URSAIPlanner.cfg
src/ursai_local_planner/include/ursai_local_planner/: ursai_planner.h  ursai_planner_ros.h  ursai_traj_gen.h
src/ursai_local_planner/src/: talker.cpp  ursai_planner.cpp  ursai_planner_ros.cpp  ursai_traj_gen.cpp
